More small tweaks.
git-svn-id: https://halldsvn.jlab.org/repos/trunk/scripts/monitoring@21421 e333a0bb-b310-0410-bd06-bbc7ae8e47d2

--- a/recon_test/index.html
+++ b/recon_test/index.html
@@ -10,29 +10,29 @@
 <body>
 	<h1>GlueX Software Reconstruction Test</h1>
 
+	<h3># Reconstructed High-Level Objects</h3>
 	<figure>
 		<img src="HistMacro_NumHighLevelObjects.png" style="width:1200px;height:800px"/>
-		<figcaption>NumHighLevelObjects.</figcaption>
 	</figure>
 
+	<h3>Beam Energy & Event Vertex</h3>
 	<figure>
 		<img src="HistMacro_EventInfo.png" style="width:1200px;height:800px"/>
-		<figcaption>EventInfo.</figcaption>
 	</figure>
 
+	<h3>Track Kinematics</h3>
 	<figure>
 		<img src="HistMacro_Kinematics.png" style="width:1200px;height:600px"/>
-		<figcaption>Kinematics.</figcaption>
 	</figure>
 
+	<h3>p2pi</h3>
 	<figure>
 		<img src="HistMacro_p2pi.png" style="width:1200px;height:800px"/>
-		<figcaption>p2pi.</figcaption>
 	</figure>
 
+	<h3>p3pi</h3>
 	<figure>
 		<img src="HistMacro_p3pi.png" style="width:1200px;height:800px"/>
-		<figcaption>p3pi.</figcaption>
 	</figure>
 
 </body>
