Fix title to reflect current campaign
git-svn-id: https://halldsvn.jlab.org/repos/trunk/scripts/monitoring@23944 e333a0bb-b310-0410-bd06-bbc7ae8e47d2

--- a/hdswif2/index.html
+++ b/hdswif2/index.html
@@ -1,8 +1,8 @@
 
 <html>
 
-<title>Offline Monitoring Launch RunPeriod-2018-01 ver19</title>
-<h1>Offline Monitoring Launch RunPeriod-2018-01 ver19</h1>
+<title>Reconstruction Launch RunPeriod-2018-01 ver02 batch04</title>
+<h1>Reconstruction Launch RunPeriod-2018-01 ver02 batch04</h1>
 
 <p>
 See overall network traffic to/from JLab at <a href="https://my.es.net/sites/view/JLAB/flow">https://my.es.net/sites/view/JLAB</a>
